# otus-spark_data_validations

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: main.yaml
bootstrap/: .terraform.lock.hcl  main.tf  provider.tf  variables.tf
infra/: .terraform.lock.hcl  main.tf  provider.tf  variables.tf
notebooks/: convert.ipynb  work.ipynb
