[project]
name = "hw3_spark_data_validation"
version = "0.1.0"
description = "New ML project"
authors = [
    { name = "Arthur Kaplanov" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "pyarrow",
    "loguru",
    "matplotlib",
    "seaborn",
    "pyspark>=4.2.0",
]

[dependency-groups]
dev = [
    "ipykernel",
    "pytest",
    "pytest-cov",
    "isort",
    "black",
    "ruff",
    "pre-commit",
    "make>=0.1.6.post2",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = []

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --cov=src --cov-report=term-missing"
